--- a/src/index.css
+++ b/src/index.css
@@ -6,56 +6,67 @@
   box-sizing: border-box;
 }
 
-html,
-body {
-  font-family: Mulish, Arial, sans-serif;
-  min-height: 100vh;
-  width: 100%;
-  padding: 0;
-  margin: 0;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+html {
+  font-family: 'Montserrat', Arial, sans-serif;
 }
 
 @font-face {
-  font-family: 'Rubik';
-  src: url('Rubik-Bold.woff') format('woff');
-  font-weight: 700;
-}
-
-@font-face {
-  font-family: 'Rubik';
-  src: url('Rubik-ExtraBold.woff') format('woff');
-  font-weight: 800;
-}
-
-@font-face {
-  font-family: 'Rubik';
-  src: url('Rubik-Regular.woff') format('woff');
-  font-weight: 400;
-}
-
-@font-face {
-  font-family: 'Rubik';
-  src: url('Rubik-Black.woff') format('woff');
-  font-weight: 900;
-}
-
-@font-face {
-  font-family: 'Rubik';
-  src: url('Rubik-SemiBold.woff') format('woff');
-  font-weight: 600;
-}
-
-@font-face {
-  font-family: 'Rubik';
-  src: url('Rubik-Medium.woff') format('woff');
+  font-family: 'Montserrat';
+  src: url('Montserrat-Regular.woff') format('woff');
   font-weight: 500;
 }
 
 @font-face {
-  font-family: 'Rubik';
-  src: url('Rubik-Light.woff') format('woff');
+  font-family: 'Montserrat';
+  src: url('Montserrat-ExtraBold.woff') format('woff');
+  font-weight: 800;
+}
+
+@font-face {
+  font-family: 'Montserrat';
+  src: url('Montserrat-SemiBold.woff') format('woff');
+  font-weight: 600;
+}
+
+@font-face {
+  font-family: 'Montserrat';
+  src: url('Montserrat-ExtraLight.woff') format('woff');
+  font-weight: 200;
+}
+
+@font-face {
+  font-family: 'Montserrat';
+  src: url('Montserrat-Light.woff') format('woff');
   font-weight: 300;
+}
+
+@font-face {
+  font-family: 'Montserrat';
+  src: url('Montserrat-Bold.woff') format('woff');
+  font-weight: 700;
+}
+
+@font-face {
+  font-family: 'Montserrat';
+  src: url('Montserrat-BoldItalic.woff') format('woff');
+  font-weight: 700;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: 'Montserrat';
+  src: url('Montserrat-Thin.woff') format('woff');
+  font-weight: 100;
+}
+
+@font-face {
+  font-family: 'Montserrat';
+  src: url('Montserrat-Black.woff') format('woff');
+  font-weight: 900;
+}
+
+@font-face {
+  font-family: 'Montserrat';
+  src: url('Montserrat-Medium.woff') format('woff');
+  font-weight: 500;
 }
