--- a/src/index.css
+++ b/src/index.css
@@ -12,61 +12,61 @@ html {
 
 @font-face {
   font-family: 'Montserrat';
-  src: url('Montserrat-Regular.woff') format('woff');
+  src: url('./assets/fonts/Montserrat-Regular.ttf') format('woff');
   font-weight: 500;
 }
 
 @font-face {
   font-family: 'Montserrat';
-  src: url('Montserrat-ExtraBold.woff') format('woff');
+  src: url('./assets/fonts/Montserrat-ExtraBold.ttf') format('woff');
   font-weight: 800;
 }
 
 @font-face {
   font-family: 'Montserrat';
-  src: url('Montserrat-SemiBold.woff') format('woff');
+  src: url('./assets/fonts/Montserrat-SemiBold.ttf') format('woff');
   font-weight: 600;
 }
 
 @font-face {
   font-family: 'Montserrat';
-  src: url('Montserrat-ExtraLight.woff') format('woff');
+  src: url('./assets/fonts/Montserrat-ExtraLight.ttf') format('woff');
   font-weight: 200;
 }
 
 @font-face {
   font-family: 'Montserrat';
-  src: url('Montserrat-Light.woff') format('woff');
+  src: url('./assets/fonts/Montserrat-Light.ttf') format('woff');
   font-weight: 300;
 }
 
 @font-face {
   font-family: 'Montserrat';
-  src: url('Montserrat-Bold.woff') format('woff');
+  src: url('./assets/fonts/Montserrat-Bold.ttf') format('woff');
   font-weight: 700;
 }
 
 @font-face {
   font-family: 'Montserrat';
-  src: url('Montserrat-BoldItalic.woff') format('woff');
+  src: url('./assets/fonts/Montserrat-BoldItalic.ttf') format('woff');
   font-weight: 700;
   font-style: italic;
 }
 
 @font-face {
   font-family: 'Montserrat';
-  src: url('Montserrat-Thin.woff') format('woff');
+  src: url('./assets/fonts/Montserrat-Thin.ttf') format('woff');
   font-weight: 100;
 }
 
 @font-face {
   font-family: 'Montserrat';
-  src: url('Montserrat-Black.woff') format('woff');
+  src: url('./assets/fonts/Montserrat-Black.ttf') format('woff');
   font-weight: 900;
 }
 
 @font-face {
   font-family: 'Montserrat';
-  src: url('Montserrat-Medium.woff') format('woff');
+  src: url('./assets/fonts/Montserrat-Medium.ttf') format('woff');
   font-weight: 500;
 }
